# Open-dLLM

./: .gitignore  BUGS.md  CLAUDE.md  JOURNEY.md  README.md  dry.py  modal_train.py  pyproject.toml  ruff.toml
.claude/tasks/: dllm-research.md  lessons.md
01_hello_diffusion/: README.md  download_data.py  hello_diffusion.py
02_nano_dllm/: README.md  nano_dllm.py  train_tokenizer.py
03_block_diffusion/: README.md  block_dllm.py  tokenizer.json
04_modern_dllm/: README.md  modern_dllm.py  tokenizer.json  train_tokenizer.py
05_optimized_dllm/: README.md  build_tokenizer.py  pretokenize.py  tokenizer.json  train.py
05_optimized_dllm/phase5/: __init__.py  attention.py  config.py  data.py  generate.py  model.py  optim.py  tokenizer.py
05_optimized_dllm/scripts/: debug_generate.py  modal_train.py  vram_probe.py
05_optimized_dllm/tests/: test_phase5.py
05_phase5_dllm/: build_tokenizer.py  debug_generate.py  pretokenize.py  train.py
05_phase5_dllm/phase5/: attention.py  checkpoint.py  config.py  data.py  fp8.py  generate.py  loss.py  model.py  optim.py  schedule.py  tokenizer.py
05_phase5_dllm/tests/: test_phase5.py
06_qwen3_dllm/: train.py
06_qwen3_dllm/phase6/: activation_compress.py  attention.py  checkpoint.py  config.py  data.py  fp8.py  generate.py  loss.py  model.py  offload_simple.py  optim.py  (+7 more)
docs/: journey.md  research.md
eval/: README.md  base_eval.py  core_eval.py
kaggle/: eval_phase2.ipynb  kernel-metadata.json  train_phase2.ipynb  train_phase3.ipynb  train_phase4.ipynb
staff_simulation/: __init__.py  audit.py  generator.py  schema.py
(+54 files in other folders)
